--- a/css/styles.css
+++ b/css/styles.css
@@ -13,16 +13,9 @@
 --timing-cubic: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .container {
-    max-width: 1158px;
-    padding: 0 15px;
-    margin: 0 auto;
-} */
-
 .container {
     width: 100%;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 0 16px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -31,7 +24,6 @@
 .container {
     width: 428px;
 }
-
 }
 
 @media screen and (min-width: 768px) {
@@ -43,6 +35,7 @@
 @media screen and (min-width: 1200px) {
 .container {
     width: 1158px;
+    padding: 0 15px;
 }
 }
 
@@ -762,7 +755,6 @@ ul {
 
 /*Cards portfolio*/
 
-
 .ul-list {
     display: flex;
     padding-left: 0;
@@ -814,22 +806,23 @@ ul {
 .flex-container {
     display: flex;
     flex-wrap: wrap;
+    gap: 48px 24px;
     padding: 0;
     margin: 0;
 }
 
-.flex-element {
+/* .flex-element {
     margin-bottom: 48px;
     margin-right: 24px;
-}
+} */
 
-.flex-element:nth-last-child(-n+3) {
+/* .flex-element:nth-last-child(-n+3) {
     margin-bottom: 0;
-}
+} */
 
-.flex-element:nth-child(3n) {
+/* .flex-element:nth-child(3n) {
     margin-right: 0;
-}
+} */
 
 img {
     display: block;
@@ -849,6 +842,36 @@ img {
 .border-link:hover,
 .border-link:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+@media screen and (max-width: 767px) {
+    .section-buttons {
+        padding: 48px 0;
+    }
+    .filter-buttons-nav {
+        flex-wrap: wrap;
+        margin-bottom: 48px;
+    }
+    .flex-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .img-overlay img {
+        width: 396px;
+    }
+}
+
+@media screen and (min-width:768px) and (max-width: 1200px) {
+    .section-buttons {
+        padding-top: 64px;
+        padding-bottom: 96px;
+    }
+    .flex-container {
+        gap: 72px 24px;
+    }
+    .img-overlay img {
+        width: 356px;
+    }
 }
 
 /* Icons */
@@ -988,7 +1011,6 @@ img {
     border-radius: 4px;
     background-color: #FCFCFC;
 }
-
 
 @media screen and (max-width: 767px) {
     .modal {
